<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="38dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:text="@string/spen_to_pc"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/desktopIpEditText"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/ip_address"
        android:inputType="text"
        android:singleLine="true"
        android:text=""
        android:textAlignment="center" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/connect" />

    <TextView
        android:id="@+id/connectionStatusLabel"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/connection_status_disconnected"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/move_to_next"
        android:visibility="gone" />

    <Button
        android:id="@+id/prev_btn"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/move_to_previous"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <TextView
        android:id="@+id/SpenData"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/spen_data"
        android:textAlignment="center" />

</LinearLayout>